first page from db now

--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -35,7 +35,7 @@
         <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
     </div>
     
-    <%= body %>
+    <%- body %>
     
     <div class="lowbar">
         <ul>
