--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(teentimesbg2.png);  
+    background-image: url(img/teentimesbg2.png);  
     background-size: auto;
     background-repeat: auto;
     min-width: 600px;
