--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
@@ -16,7 +17,7 @@
 	
             });
     </script>
-    <link rel="shortcut icon" href="favicon1.png" type="image/png">
+    <link rel="shortcut icon" href="/img/favicon1.png" type="image/png">
     <title>Zen Sick</title>
 </head>
 <body>
@@ -34,9 +35,7 @@
         <h1><a href="http://rinsdesyu.github.io/another_directory/another_page.html">Zen Sick</a></h1>
         <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
     </div>
-    
     <%- body %>
-    
     <div class="lowbar">
         <ul>
             <li><a href="http://zensick.net/about">About</a></li>
