List of posts is showing now on admin page, improved templates, small fixes in db_connection

--- a/templates/add_new_post.ejs
+++ b/templates/add_new_post.ejs
@@ -12,7 +12,7 @@
     <title>New post</title>
 </head>
 <body>
-	<form method="post" action="admin/submit" style="background-color:rgba(255, 255, 255, 0.8);">
+	<form method="post" action="submit" style="background-color:rgba(255, 255, 255, 0.8);">
 		<p>Новый пост</p><br>
 		<input name="title" type="text"><br>
 		<textarea name="body" cols="40" rows="3"></textarea>
