--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -35,7 +35,25 @@
         <h1><a href="http://rinsdesyu.github.io/another_directory/another_page.html">Zen Sick</a></h1>
         <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
     </div>
-    <%- body %>
+	
+	
+	
+    <!-- template thingy -->
+	
+	<% for(var i = 0; i < posts.length; i++) { %>
+    	<div class="article">
+			<h3><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
+			<%- posts[i].body %>
+			<div id="time">
+				<time><%- String(posts[i].created).slice(16, 21) %></time>
+			</div>
+		</div>
+    <% } %>
+	
+    <!-- end of template thingy -->
+	
+	
+	
     <div class="lowbar">
         <ul>
             <li><a href="http://zensick.net/about">About</a></li>
