--- a/public/main.css
+++ b/public/main.css
@@ -226,6 +226,7 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
     box-shadow: 5px 5px 5px #888888;
+    padding-left: 10px;
         
 }
 #music iframe {
