--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -36,7 +36,7 @@
         <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
     </div>
 	
-	
+	<div class="column">
 	
     <!-- template thingy -->
 	
@@ -52,7 +52,7 @@
 	
     <!-- end of template thingy -->
 	
-	
+	</div>
 	
     <div class="lowbar">
         <ul>
