Mobile width fix

--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -31,11 +31,12 @@
         </ul>
     </div>
     
-    <div class="Header">
-        <h1><a href="http://rinsdesyu.github.io/another_directory/another_page.html">Zen Sick</a></h1>
-        <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
-    </div>
-	
+    <div class="bars">
+        <div class="Header">
+            <h1><a href="http://rinsdesyu.github.io/another_directory/another_page.html">Zen Sick</a></h1>
+            <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
+        </div>
+	</div>
 	<div class="column">
 	
     <!-- template thingy -->
@@ -54,13 +55,15 @@
 	
 	</div>
 	
-    <div class="lowbar">
-        <ul>
-            <li><a href="http://zensick.net/about">About</a></li>
-            <li><a href="http://zensick.net/authors">Authors</a></li>
-            <li><a href="http://zensick.net/contacts">Contact Us</a></li>
-            <li><p>©Zen Sick Webzin. 2014.</p></li>
-        </ul>
+    <div class="bars">
+        <div class="lowbar">
+            <ul>
+                <li><a href="http://zensick.net/about">About</a></li>
+                <li><a href="http://zensick.net/authors">Authors</a></li>
+                <li><a href="http://zensick.net/contacts">Contact Us</a></li>
+                <li><p>©Zen Sick Webzin. 2014.</p></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
