--- a/public/main.css
+++ b/public/main.css
@@ -64,7 +64,11 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-
+.bars {
+    max-width: 1333px;
+    margin-left: auto;
+    margin-right: auto;
+}
 @media screen and (max-width: 768px) {
     body {
         max-width: 768px;
@@ -87,18 +91,18 @@ body {
         margin-right: auto;
         margin-top: 20px;
         box-shadow: 5px 5px 5px #888888;
-}
+    }
     .article h3 {
         text-align: center;
         font-size: 20px;
-}
+    }
     .img img {
         display: block;
         margin-left: auto;
         margin-right: auto;
         margin-top: 20px;
         max-width: 700px; 
-}
+    }
     .NavBar {
         background-color: #2f4cd6;
         position: fixed;
@@ -109,7 +113,7 @@ body {
         opacity: 0.85;
         width: 100vw;
         text-align: center;
-}         
+    }         
     .img {
         background: #fff;
         font-family: PT Sans, monospace;
@@ -122,7 +126,7 @@ body {
         margin-top: 20px;
         margin-bottom: 20px;
         box-shadow: 5px 5px 5px #888888;
-}
+    }
     #music {
         background-color: : #fff;
         font-family: PT Sans, monospace;
@@ -136,7 +140,7 @@ body {
         margin-bottom: 20px;
         box-shadow: 5px 5px 5px #888888;
         
-}
+    }
     .lowbar {
         background-color: #fff;
         position: absolute;
@@ -146,7 +150,17 @@ body {
         opacity: 0.85;
         text-align: center;
         max-width: 768px;
-}
+    }
+    .column {
+        max-width: inherit;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .bars {
+        max-width: inherit;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 .article {
     background: #fff;
