--- a/public/main.css
+++ b/public/main.css
@@ -149,7 +149,7 @@ body {
         margin-top: 10px;
         opacity: 0.85;
         text-align: center;
-        max-width: 768px;
+        max-width: 100vw;
     }
     .column {
         max-width: inherit;
@@ -157,7 +157,7 @@ body {
         margin-right: auto;
     }
     .bars {
-        max-width: inherit;
+        max-width: 768px;
         margin-left: auto;
         margin-right: auto;
     }
