--- a/public/main.css
+++ b/public/main.css
@@ -72,7 +72,6 @@ body {
 @media screen and (max-width: 768px) {
     body {
         max-width: 768px;
-        background-size: contain;
     }     
     .Header p {
         font-family: PT Sans, monospace;
@@ -85,7 +84,7 @@ body {
         font-family: PT Sans, monospace;
         padding: : 50px;
         text-align: left;
-        width: 700px;
+        max-width: 700px;
         border: white solid;
         margin-left: auto;
         margin-right: auto;
@@ -101,10 +100,10 @@ body {
         margin-left: auto;
         margin-right: auto;
         margin-top: 20px;
-        max-width: 700px; 
+        max-width: 680px; 
     }
     .NavBar {
-        background-color: #2f4cd6;
+        background-color: #195da1;
         position: fixed;
         z-index: 1;
         display: block;
@@ -119,7 +118,7 @@ body {
         font-family: PT Sans, monospace;
         padding: : 50px;
         text-align: left;
-        width: 700px;
+        max-width: 700px;
         border: white solid;
         margin-left: auto;
         margin-right: auto;
