Whatsoever about img and music posts

--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -45,10 +45,17 @@
     	<div class="article">
 			<h3><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
 			<%- posts[i].body %>
+            <div class="img">
+                <%- posts[i].body %>
+            </div>
+            <div id="music" class="ui-widget ui-corner-all ui-state-error">
+                <%- posts[i].body %>
+            </div>
 			<div id="time">
 				<time><%- String(posts[i].created).slice(16, 21) %></time>
 			</div>
 		</div>
+        
     <% } %>
 	
     <!-- end of template thingy -->
