Articles have type now, small updates in admin page and article page

--- a/templates/add_new_post.ejs
+++ b/templates/add_new_post.ejs
@@ -14,7 +14,11 @@
 <body>
 	<form method="post" action="submit" style="background-color:rgba(255, 255, 255, 0.8);">
 		<p>Новый пост</p><br>
-		<input name="title" type="text"><br>
+		Title:
+		<input name="title" type="text" value="title"><br>
+		Type:
+		<input name="type" type="text"><br>
+		Body:
 		<textarea name="body" cols="40" rows="3"></textarea>
 		<input type="submit" value="Submit">
 	</form>
