--- a/templates/admin.ejs
+++ b/templates/admin.ejs
@@ -2,9 +2,10 @@
 	<% for(var i = 0; i < posts.length; i++) { %>
 		<tr>
 			<td><%- posts[i].id %></td>
+			<td><%- posts[i].type %></td>
 			<td><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></td>>
 			<td><%- posts[i].body %></td>
-			<td><time><%- String(posts[i].created).slice(16, 21) %></time></td>
+			<td><time><%- String(posts[i].created).slice(0, 21) %></time></td>
 		</tr>
 	<% } %>
 </table>
