--- a/templates/submit_new_post.ejs
+++ b/templates/submit_new_post.ejs
@@ -25,6 +25,7 @@
 		</form>
 		<form class="submitbar" method="post" action="/admin" style="display:inline;">
 			<input name="title" type="text" value="<%- title %>" style="display:none;"><br>
+			<input name="type" type="text" value="<%- type %>" style="display:none;"><br>
 			<textarea name="body" cols="40" rows="3" style="display:none;"><%- body %></textarea>
 			<input type="submit" value="Proceed" style="height:50px; font-weight:bold;">
 		</form>
