--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -41,7 +41,7 @@
     <!-- template thingy -->
 	
 	<% for(var i = 0; i < posts.length; i++) { %>
-    	<div class="article">
+    	<div class="<%- posts[i].type %>">
 			<h3><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
 			<%- posts[i].body %>
 			<div id="time">
