Small Alex's fix

--- a/public/main.css
+++ b/public/main.css
@@ -56,7 +56,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     opacity: 0.85;
-    width: 1333px;
+    width: 98vw;
     text-align: center;
 }     
 .column {
@@ -265,7 +265,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     opacity: 0.85;
-    width: 1333px;
+    width: 98vw;
     text-align: center;
 }
 .lowbar li {
