Choosing type of articles from list

--- a/templates/add_new_post.ejs
+++ b/templates/add_new_post.ejs
@@ -17,7 +17,11 @@
 		Title:
 		<input name="title" type="text" value="title"><br>
 		Type:
-		<input name="type" type="text"><br>
+		<select name="type" required>
+			<option>article</option>
+			<option>music</option>
+			<option>picture</option>
+		</select>
 		Body:
 		<textarea name="body" cols="40" rows="3"></textarea>
 		<input type="submit" value="Submit">
