--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -42,12 +42,14 @@
     <!-- template thingy -->
 	
 	<% for(var i = 0; i < posts.length; i++) { %>
-    	<div class="<%- posts[i].type %>">
+    	<div class="column">
+        <div class="<%- posts[i].type %>">
 			<h3><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
 			<%- posts[i].body %>
             <div id="time">
 				<time><%- String(posts[i].created).slice(16, 21) %></time>
 			</div>
+            </div>
 		</div>
     <% } %>
 	
