--- a/public/main.css
+++ b/public/main.css
@@ -59,7 +59,7 @@ body {
     width: 98vw;
     text-align: center;
 }     
-.column div {
+.column .<%- posts[i].type %> {
     background: #fff;
     font-family: PT Sans, monospace;
     padding: : 50px;
