Page.html + cyrillic font

--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -8,15 +8,9 @@
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Patrick+Hand+SC&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Fira+Sans:500&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript">
-            $(function() {
-	
-	           $('#music').draggable();
-	
-            });
-    </script>
     <link rel="shortcut icon" href="/img/favicon1.png" type="image/png">
     <title>Zen Sick</title>
 </head>
