Zensick logo to pages

--- a/templates/page.html
+++ b/templates/page.html
@@ -15,7 +15,7 @@
     <body>
         <div class="NavBar">
             <ul>
-                <li><a href="http://zensick.net/"><img src="/img/favicon1.png" /></a>
+                <li><a href="http://zensick.net/"><img src="public/img/nav1.png" /></a>
                 <li><a href="http://zensick.net/lastissue">LAST ISSUE</a></li>
                 <li><a href="http://zensick.net/art">ART</a></li>
                 <li><a href="http://zensick.net/music">MUSIC</a></li>
