--- a/templates/page.html
+++ b/templates/page.html
@@ -8,7 +8,7 @@
         <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Patrick+Hand+SC&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Fira+Sans:500&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Istok+Web&subset=cyrillic-ext' rel='stylesheet' type='text/css'>
         <link rel="shortcut icon" href="/img/favicon1.png" type="image/png">
         <title>Zen Sick</title>
     </head>
