--- a/public/main.css
+++ b/public/main.css
@@ -61,7 +61,7 @@ body {
 }     
 .column .<%- posts[i].type %> {
     background: #fff;
-    font-family: PT Sans, 'Fira Sans', monospace;
+    font-family: PT Sans, monospace;
     padding: : 50px;
     margin-left: auto;
     margin-right: auto;
@@ -88,7 +88,7 @@ body {
     }
     .article {
         background: #fff;
-        font-family: PT Sans, 'Fira Sans', monospace;
+        font-family: PT Sans, monospace;
         padding: : 50px;
         text-align: left;
         max-width: 700px;
@@ -122,7 +122,7 @@ body {
     }         
     .picture {
         background: #fff;
-        font-family: PT Sans, 'Fira Sans', monospace;
+        font-family: PT Sans, monospace;
         padding: : 50px;
         text-align: left;
         max-width: 700px;
@@ -135,7 +135,7 @@ body {
     }
     .music {
         background-color: : #fff;
-        font-family: PT Sans, 'Fira Sans', monospace;
+        font-family: PT Sans, monospace;
         padding: : 50px;
         text-align: left;
         width: 700px;
@@ -170,7 +170,7 @@ body {
 }
 .article {
     background: #fff;
-    font-family: PT Sans, 'Fira Sans', monospace;
+    font-family: PT Sans, monospace;
     padding: : 50px;
     text-align: left;
     width: 750px;
@@ -204,7 +204,7 @@ body {
 }
 .picture {
     background: #fff;
-    font-family: PT Sans, 'Fira Sans', monospace;
+    font-family: PT Sans, monospace;
     padding: : 50px;
     text-align: left;
     width: 750px;
@@ -242,7 +242,7 @@ body {
         
 .music {
     background: #fff;
-    font-family: PT Sans, 'Fira Sans', monospace;
+    font-family: PT Sans, monospace;
     padding-top: 25px;
     text-align: left;
     width: 750px;
