--- a/templates/submit_new_post.ejs
+++ b/templates/submit_new_post.ejs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">
+    <!--<meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
@@ -10,7 +11,7 @@
     <link href='http://fonts.googleapis.com/css?family=Patrick+Hand+SC&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	
+	<link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript">
             $(function() {
 	           $('#music').draggable();
@@ -18,25 +19,28 @@
     </script>
     <link rel="shortcut icon" href="/img/favicon1.png" type="image/png">
     <title>Zen Sick</title>
+	<style>
+		body {
+			min-width:0px;
+		}
+		.article {
+			max-width:750px;
+			width:94%;
+			margin:auto;
+		}
+	</style>
 </head>
 <body>
-	<div style="width: 100%; height: 60px; background-color:red;text-align:center;margin:0px;">
-		<form class="submitbar" method="get" action="/admin" style="display:inline;">
-			<input type="submit" value="Cancel" style="height:50px">
-		</form>
-		<form class="submitbar" method="post" action="/admin" style="display:inline-block;">
+	<div style="width: 100%;text-align:center;margin:0px; padding:15px;">
+		<form class="submitbar" method="get" action="/admin" style="display:inline;" id="back"></form>
+		<form class="submitbar" method="post" action="/admin" style="display:inline-block;" id="forward">
 			<input name="title" type="text" value="<%- title %>" style="display:none;">
 			<input name="type" type="text" value="<%- type %>" style="display:none;">
 			<textarea name="body" cols="40" rows="3" style="display:none;"><%- body %></textarea>
-			<input type="submit" value="Proceed" style="height:50px; font-weight:bold;">
 		</form>
+		<input type="submit" value="Cancel" class="btn btn-default btn-lg" form="back">
+		<input type="submit" value="Proceed" class="btn btn-primary btn-lg" form="forward">
 	</div>
-	
-	
-    <div class="Header">
-        <h1><a href="http://rinsdesyu.github.io/another_directory/another_page.html">Zen Sick</a></h1>
-        <p>The magazine about art, modern culture, net projects, music, experimental literature and lifestyle.</p>
-    </div>
 	
 	<div class="<%- type %>">
 		<h3><a href=""><%- title %></a></h3>
@@ -45,14 +49,5 @@
 			<time><%- time %></time>
 		</div>
 	</div>
-	
-	<div class="lowbar">
-        <ul>
-            <li><a href="http://zensick.net/about">About</a></li>
-            <li><a href="http://zensick.net/authors">Authors</a></li>
-            <li><a href="http://zensick.net/contacts">Contact Us</a></li>
-            <li><p>©Zen Sick Webzin. 2014.</p></li>
-        </ul>
-    </div>
 </body>
 </html>
