--- a/templates/admin.ejs
+++ b/templates/admin.ejs
@@ -1,8 +1,8 @@
 <link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
 <style>
 	.body>div {
 		max-height:300px;
+		max-width:100%;
 		overflow-y:auto;
 	}
 	
@@ -53,41 +53,3 @@
 		</tr>
 	<% } %>
 </table>
-
-<!-- 
-<style>
-	table {
-		width: 100%;
-		min-width: 900px;
-		border-style:solid;
-		border-width:1px;
-	}
-	
-	td {
-		padding:0px;
-	}
-	
-	tr:nth-child(odd) {
-		background-color:rgba(245, 230, 203, 0.3);	
-	}
-	
-	tr:nth-child(odd)>td:nth-child(odd) {
-		background-color:rgba(187, 179, 163, 0.3);	
-	}
-	
-	tr:nth-child(even)>td:nth-child(odd) {	
-		background-color:rgba(189, 189, 189, 0.3);
-	}
-	
-	
-	.false {
-		background:url('/img/closed.png');
-	}
-	.switch {
-		text-align: center;
-	}	
-	thead {
-		font-weight: bold;
-		text-align: center;
-	}
-</style> --> d
