--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -3,23 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="/public/main.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link rel="shortcut icon" href="/img/favicon1.png" type="image/png">
+    <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
     <title>Zen Sick</title>
 </head>
 <body>
     <div class="NavBar">
         <ul>
-            <li><a href="http://zensick.net/lastissue">LAST ISSUE</a></li>
-            <li><a href="http://zensick.net/art">ART</a></li>
-            <li><a href="http://zensick.net/music">MUSIC</a></li>
-            <li><a href="http://zensick.net/literature">LITERATURE</a></li>
-            <li><a href="http://zensick.net/articles">ARTICLES</a></li>
+            <li><a href="/lastissue">LAST ISSUE</a></li>
+            <li><a href="/art">ART</a></li>
+            <li><a href="/music">MUSIC</a></li>
+            <li><a href="/literature">LITERATURE</a></li>
+            <li><a href="/articles">ARTICLES</a></li>
         </ul>
     </div>
     
