--- a/templates/admin/login.ejs
+++ b/templates/admin/login.ejs
@@ -12,7 +12,7 @@
 		<form class="form-signin" method="post" action="">
 			<h2 class="form-signin-heading">Please sign in</h2>
 			<label for="inputEmail" class="sr-only">Username</label>
-			<input name="username" type="username" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+			<input name="username" type="username" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="">
 			<label for="inputPassword" class="sr-only">Password</label>
 			<input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
