--- a/templates/admin/submit_new_post.ejs
+++ b/templates/admin/submit_new_post.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!--<meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff">-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/public/main.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
@@ -12,12 +12,7 @@
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<link href="/public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript">
-            $(function() {
-	           $('#music').draggable();
-            });
-    </script>
-    <link rel="shortcut icon" href="/img/favicon1.png" type="image/png">
+    <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
     <title>Zen Sick</title>
 	<style>
 		body {
@@ -36,6 +31,7 @@
 		<form class="submitbar" method="post" action="/admin" style="display:inline-block;" id="forward">
 			<input name="title" type="text" value="<%- title %>" style="display:none;">
 			<input name="type" type="text" value="<%- type %>" style="display:none;">
+			<input name="tags" type="text" value="<%- tags %>" style='display:none;'>
 			<textarea name="body" cols="40" rows="3" style="display:none;"><%- unrendered %></textarea>
 		</form>
 		<input type="submit" value="Cancel" class="btn btn-default btn-lg" form="back">
@@ -49,5 +45,6 @@
 			<time><%- time %></time>
 		</div>
 	</div>
+	<script defer>alert('<%- tags %>');</script>
 </body>
 </html>
