continued work on tags

--- a/templates/admin/submit_new_post.ejs
+++ b/templates/admin/submit_new_post.ejs
@@ -45,6 +45,9 @@
 			<time><%- time %></time>
 		</div>
 	</div>
-	<script defer>alert('<%- tags %>');</script>
+	<script defer>
+		var x = '<%- tags %>';
+		alert(x.split(' '));
+	</script>
 </body>
 </html>
