--- a/templates/404.ejs
+++ b/templates/404.ejs
@@ -3,7 +3,7 @@
 <head>
     <title>404</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="/404/404.css">
+    <link rel="stylesheet" type="text/css" href="public/404/404.css">
 </head>
 
 <body>
@@ -12,6 +12,6 @@
             <h2>You looked for something.</h2>
             <p>It's certainly not here.</p>
         </div>
-		<img src="/404/4041.png">
+		<img src="public/404/4041.png">
 	</center>
 </body> 
