--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -15,12 +15,12 @@
     <body>
         <div class="NavBar">
             <ul>
-                <li><a href="http://zensick.net/"><img src="/public/img/nav1.png"></a>
-                <li><a href="http://zensick.net/lastissue">LAST ISSUE</a></li>
-                <li><a href="http://zensick.net/art">ART</a></li>
-                <li><a href="http://zensick.net/music">MUSIC</a></li>
-                <li><a href="http://zensick.net/literature">LITERATURE</a></li>
-                <li><a href="http://zensick.net/articles">ARTICLES</a></li>
+                <li><a href="/"><img src="/public/img/nav1.png"></a>
+                <li><a href="/lastissue">LAST ISSUE</a></li>
+                <li><a href="/art">ART</a></li>
+                <li><a href="/music">MUSIC</a></li>
+                <li><a href="/literature">LITERATURE</a></li>
+                <li><a href="/articles">ARTICLES</a></li>
             </ul>
         </div>
         <div class="column">
