--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -24,15 +24,11 @@
             </ul>
         </div>
         <div class="column">
-            <% for(var i = 0; i < posts.length; i++) { %>
-                <div class="<%- posts[i].type %>">
-			         <h3><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
-			         <%- posts[i].body %>
-            <div id="time">
-				<time><%- String(posts[i].created).slice(16, 21) %></time>
-			 </div>
-		          </div>
-            <% } %>
+            <%- posts[0].id %>
+            <%- posts[0].type %>
+                <a href="/articles/<%- posts[0].id %>"><%- posts[0].title %></a>
+            <%- posts[0].body %>
+            <time><%- String(posts[0].created).slice(16, 21) %></time>
         </div>
     </body>
 </html>
