--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -9,6 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="/public/js/main.js"></script>
     <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
     <title>Zen Sick</title>
 </head>
@@ -37,6 +38,7 @@
         <div class="<%- posts[i].type %>">
 			<h3><a href="/articles/<%- posts[i].id %>"><%- posts[i].title %></a></h3>
 			<%- posts[i].body %>
+            <div class='tags' id='t<%- posts[i].id %>'></div>
             <div id="time">
 				<time><%- String(posts[i].created).slice(16, 21) %></time>
 			</div>
